--- a/style.css
+++ b/style.css
@@ -1,29 +1,34 @@
 img {
     width: 200px;
 }
-body {
+.text {
     text-align: center;
+}
+body {
     font-family: "sans-serif";
-    background-color: mediumseagreen;
-    color: powderblue;
-    background-image: url(https://imgs.search.brave.com/L-b8_GtpaG6xQNQeUOYU7_IzbbrU58kWIgwDBdzUZr0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wdWIt/c3RhdGljLmZvdG9y/LmNvbS9hc3NldHMv/YmcvYWQ4YjU3NTct/NWUxMy00MDFiLTk0/ZjQtNzAwYjMxYTI2/ZmE3LmpwZw);
+    background-color: #0d1310;
+    background-image: url(bgimage.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    color: #f9f9f9;
     #nav {
         ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
             width: 100%;
-            background-color: darkslategrey;
+            background-color: #1f1f1f;
             height: 20;
-            position: top, sticky;
+            position: sticky;
             overflow: auto;
-            top: 2px;
-            left: 2px;
+            top: 0;
+            left: 5px;
             border-radius: 10px;
         }
         li a {
             display: block;
-            color: #000;
+            color: #f1f1f1;
             padding: 8px 16px;
             text-decoration: none;
         }
@@ -42,4 +47,104 @@ body {
             float: left;
         }
     }
+    .card {
+        text-align: center;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        border-radius: 10px;
+        /* background-color: #18241e; */
+        margin: 10px;
+    }
+    .card:hover {
+        box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2);
+    }
+    .musicontainer {
+        padding: 10px 20px;
+    }
+    img {
+        border-radius: 10px 10px 10px 10px;
+    }
+    .cards {
+        display: grid;
+        grid-template-columns: auto auto;
+    }
+    svg {
+        fill: #f9f9f9;
+    }
+    .aboutcard {
+        text-align: center;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        border-radius: 10px;
+        /* background-color: #18241e; */
+        margin: 5px;
+    }
+    .hobbycard {
+        text-align: center;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        border-radius: 10px;
+        /* background-color: #18241e; */
+        margin: 5px;
+    }
+
+    #info {
+        padding: 2px 2px;
+        min-width: 100%;
+    }
+}
+.glass3d {
+    --filter-glass3d: blur(3px) brightness(0.85) saturate(2.5);
+    --color-glass3d: hsl(150 0% 12% / 0.7);
+    --noise-glass3d: url("https://www.transparenttextures.com/patterns/egg-shell.png");
+
+    position: relative;
+    z-index: 4;
+    box-shadow:
+        0 0 0.75px hsl(205 20% 10% / 0.2),
+        0.7px 0.8px 1.2px -0.4px hsl(205 20% 10% / 0.1),
+        1.3px 1.5px 2.2px -0.8px hsl(205 20% 10% / 0.1),
+        2.3px 2.6px 3.9px -1.2px hsl(205 20% 10% / 0.1),
+        3.9px 4.4px 6.6px -1.7px hsl(205 20% 10% / 0.1),
+        6.5px 7.2px 10.9px -2.1px hsl(205 20% 10% / 0.1),
+        8px 9px 14px -2.5px hsl(205 20% 10% / 0.2);
+}
+
+.glass3d::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    border-radius: inherit;
+    overflow: hidden;
+    z-index: 3;
+
+    -webkit-backdrop-filter: var(--filter-glass3d);
+    backdrop-filter: var(--filter-glass3d);
+    background-color: var(--color-glass3d);
+    background-image: var(--noise-glass3d);
+    background-size: 100px;
+    background-repeat: repeat;
+}
+
+.glass3d::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    border-radius: inherit;
+    overflow: hidden;
+    z-index: 5;
+
+    box-shadow:
+        inset 2px 2px 1px -3px hsl(205 20% 90% / 0.8),
+        inset 4px 4px 2px -6px hsl(205 20% 90% / 0.3),
+        inset 1.5px 1.5px 1.5px -0.75px hsl(205 20% 90% / 0.15),
+        inset 1.5px 1.5px 0.25px hsl(205 20% 90% / 0.03),
+        inset 0 0 0.25px 0.5px hsl(205 20% 90% / 0.03);
+}
+
+.glass3d > * {
+    position: relative;
+    z-index: 6;
 }
